sezon-1/7-configmap/gitea-deploy-volumes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  labels:
    app: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
      - name: gitea
        image: gitea/gitea:latest
        ports:
        - containerPort: 3000
          name: web
        - containerPort: 22
          name: ssh

        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 3

#        # custom app.ini
#        # WARNING - this makes configuration impossible from web interface!
        volumeMounts:
        - name: custom-conf
          mountPath: /data/gitea/conf/
        - name: plik-config-map
          mountPath: /data/gitea/plikMap/
#        
      volumes:
      - name: custom-conf
        configMap:
          name: gitea-config-file
      - name: plik-config-map
        configMap:
          name: app-conf
          items:
            - key: kibana
              path: kibana.ini
            - key: git
              path: git.yaml
